fixed text overflow

--- a/hackathon_portal/static/css/default.css
+++ b/hackathon_portal/static/css/default.css
@@ -109,6 +109,7 @@ em{
     bottom: 0;
     left: 0;
     display: none;
+    overflow: hidden;
 }	
 
 .project-box .project-desc {
